--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,12 +28,12 @@ jobs:
         echo "COSMOS_DB_ENDPOINT=${{ secrets.COSMOS_DB_ENDPOINT  }}" >> $GITHUB_ENV
         echo "COSMOS_DB_KEY=${{ secrets.COSMOS_DB_KEY }}" >> $GITHUB_ENV
 
-    - name: Run test
+    - name: Run tests
       env:
         COSMOS_DB_ENDPOINT: ${{ secrets.COSMOS_DB_ENDPOINT }}
         COSMOS_DB_KEY: ${{ secrets.COSMOS_DB_KEY }}
       run: |
-        cd MyFunction/test
+        cd MyFunction
         pytest
 
     - name: Azure Login
